--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -48,21 +48,69 @@
                     <p id="lorem" th:text="${post.postText}">This card has supporting text below as a natural lead-in to
                         additional content. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam a nesciunt
                         distinctio sunt facere doloribus, ullam perferendis natus. Ipsa ullam, perferendis sequi
-                        voluptates qui dolore distinctio in laboriosam, reiciendis voluptatibus deserunt vero vitae
-                        impedit ex? Ducimus cumque nisi veritatis deserunt tenetur! Officiis quibusdam quo eligendi
-                        deserunt enim suscipit officia culpa blanditiis nam eum. Esse culpa aliquam dolorum beatae
-                        fugiat tempore unde ipsam at, dolores ea accusantium dicta quidem quaerat voluptate deleniti
-                        nobis voluptatibus earum, incidunt magni? Dolorem atque praesentium illo suscipit consequuntur a
-                        aliquam eum vero voluptates magni quae vel vitae blanditiis quam quasi commodi id aperiam velit
-                        consequatur labore, eius dolorum. Ipsa ad deserunt voluptates impedit officiis atque
-                        necessitatibus, velit non obcaecati nisi. Dolorum quaerat reprehenderit laboriosam perferendis
-                        officia ad mollitia, excepturi libero recusandae culpa eveniet neque nulla accusantium cumque
-                        repellat, deserunt labore quidem. Repudiandae velit veniam, exercitationem temporibus natus,
-                        explicabo voluptas aperiam distinctio doloribus maiores assumenda officiis iusto enim
-                        dignissimos ad sed minus ipsum. Odio debitis doloribus voluptatibus quos tempora ratione ipsum
-                        esse magni modi! Voluptas sunt dolor eligendi asperiores eum provident neque aperiam quidem
-                        iusto illo voluptatem dicta tempore aliquid cum quis voluptatum a, nihil accusamus, obcaecati
-                        necessitatibus, alias nesciunt? Aperiam fuga, officia culpa totam necessitatibus voluptatibus?
+                        voluptates qui dolore distinctio 
+                    </p>
+                    <p id="text"></p>
+                </div>
+                <div class="card-footer">
+                    <form class="text-muted">
+                        <input type="checkbox" id="chec">
+                        <i class="bi bi-heart bi-heart-fill"></i>
+                        <label for="chec">
+                            <i class="bi bi-chat-dots"></i>
+                        </label>
+                        <button class="btn btn-outline-primary"><a th:href="@{/view(id=${post.id})}">View</a></button>
+                        <div class="input-group comment">
+                            <form action="">
+                                <input type="text" class="form-control" placeholder="Comment . . ." />
+                                <div class="input-group-append" id="button-addon4">
+                                    <button class="btn btn-outline-secondary" type="button">Send</button>
+                                    <button class="btn btn-outline-secondary" type="button">More..</button>
+                                </div>
+                            </form>
+                          </div>
+                    </form>
+                </div>
+            </div>
+            <div class="card" th:each="post: ${posts}">
+                <img class="card-img-top" th:src="@{'/getImage/'+${post.imageName}}" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${post.title}">title</h5>
+                    <p id="lorem" th:text="${post.postText}">This card has supporting text below as a natural lead-in to
+                        additional content. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam a nesciunt
+                        distinctio sunt facere doloribus, ullam perferendis natus. Ipsa ullam, perferendis sequi
+                        voluptates qui dolore distinctio 
+                    </p>
+                    <p id="text"></p>
+                </div>
+                <div class="card-footer">
+                    <form class="text-muted">
+                        <input type="checkbox" id="chec">
+                        <i class="bi bi-heart bi-heart-fill"></i>
+                        <label for="chec">
+                            <i class="bi bi-chat-dots"></i>
+                        </label>
+                        <button class="btn btn-outline-primary"><a th:href="@{/view(id=${post.id})}">View</a></button>
+                        <div class="input-group comment">
+                            <form action="">
+                                <input type="text" class="form-control" placeholder="Comment . . ." />
+                                <div class="input-group-append" id="button-addon4">
+                                    <button class="btn btn-outline-secondary" type="button">Send</button>
+                                    <button class="btn btn-outline-secondary" type="button">More..</button>
+                                </div>
+                            </form>
+                          </div>
+                    </form>
+                </div>
+            </div>
+            <div class="card" th:each="post: ${posts}">
+                <img class="card-img-top" th:src="@{'/getImage/'+${post.imageName}}" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${post.title}">title</h5>
+                    <p id="lorem" th:text="${post.postText}">This card has supporting text below as a natural lead-in to
+                        additional content. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam a nesciunt
+                        distinctio sunt facere doloribus, ullam perferendis natus. Ipsa ullam, perferendis sequi
+                        voluptates qui dolore distinctio 
                     </p>
                     <p id="text"></p>
                 </div>
